--- a/appingoUC.json
+++ b/appingoUC.json
@@ -22,10 +22,10 @@
         "photo":  "https://cdn.pixabay.com/photo/2020/10/22/06/22/ump-5675038_960_720.jpg",
         "color": "#7A002A",
         "txt_size": "18",
-        "link": true,
+        "link": false,
 		"link_titre": "Get Coins",
-		"setLink": "https://www.google.com",
-        "photo_link": "https://www.google.com",
+		"setLink": "https://viral782.com/list/435514",
+        "photo_link": "https://viral782.com/list/435514",
         "txt": "\n\n⚡ If you are one of many new players taking their first steps in the unforgiving universe of Battle Royale, we invite you to discover our guide which will allow you to be more efficient on the field and will certainly serve you to win your games and finish in the TOP 1. \n\n⚡ Hiding out inbuildings might let you survive and be on the Top 10, but this way you will not get yourself improved. \n\n⚡ The trouble is that PUBG is surprisingly complex. There are a lot of details to know and learn along the way to be a pro player. Fortunately, we have spent some enough time on the game to find some Battlegrounds advanced tactics, tips, tricks, and strategies to help you on your mission for a chicken dinner.\n\n⚡  Please support us by a 5 stars rating and a beautiful comment ❤ ",
         "ifNat": false,
 		"ground": "#8BC34A"
