--- a/appingoUC.json
+++ b/appingoUC.json
@@ -7,8 +7,8 @@
         "AdmobBanner": "ca-app-pub-3940256099942544/6300978111",
         "AdmobInterstitial": "ca-app-pub-3940256099942544/1033173712",
 
-        "FbBanner": "IMG_16_9_APP_INSTALL#173186393601951_299214384332484",
-        "FbInterstitial": "IMG_16_9_APP_INSTALL#173186393601951_288058788781377",
+        "FbBanner": "1216354202465484_1216357455798492",
+        "FbInterstitial": "1216354202465484_1216357645798473",
 		
         "CpaImage": true,
         "CpaImageImg" : "https://media.giphy.com/media/QfKOejfdCT3USc41DO/giphy.gif",
